Populando as tabelas e testando a busca de pessoa por CPF

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -5,4 +5,4 @@ spring.h2.console.path=/h2
 spring.datasource.url=jdbc:h2:mem:springboottdd
 spring.jpa.hibernate.ddl-auto=none
 #flyway
-spring.flyway.locations=classpath:db/migration/hsql
+spring.flyway.locations=classpath:db/migrations/hsql
