--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -4,5 +4,6 @@ spring.h2.console.path=/h2
 #jpa
 spring.datasource.url=jdbc:h2:mem:springboottdd
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
 #flyway
 spring.flyway.locations=classpath:db/migrations/hsql
